[gd_scene load_steps=6 format=3 uid="uid://bv4laudr21ujr"]

[ext_resource type="Script" path="res://Clock.gd" id="1_otpqj"]
[ext_resource type="Texture2D" uid="uid://dhqwcduvhcn4b" path="res://assets/images/background.png" id="1_xd1w6"]
[ext_resource type="Texture2D" uid="uid://cgcw4b7cnqdvr" path="res://assets/images/hour_hand.png" id="2_rb0ut"]
[ext_resource type="Texture2D" uid="uid://ow2klb3x57vw" path="res://assets/images/minute_hand.png" id="3_g2ky0"]
[ext_resource type="Texture2D" uid="uid://bluq53621jp10" path="res://assets/images/second_hand.png" id="4_ng60m"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Clock" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_otpqj")

[node name="Background" type="Sprite2D" parent="Clock"]
texture = ExtResource("1_xd1w6")

[node name="HourHand" type="Sprite2D" parent="Clock"]
position = Vector2(6, 6)
rotation = 0.785398
texture = ExtResource("2_rb0ut")
offset = Vector2(2.08165e-12, -55)

[node name="MinuteHand" type="Sprite2D" parent="Clock"]
position = Vector2(6, 6)
rotation = -0.785398
texture = ExtResource("3_g2ky0")
offset = Vector2(2.08165e-12, -90)

[node name="SecondHand" type="Sprite2D" parent="Clock"]
position = Vector2(6, 6)
rotation = 0.349066
texture = ExtResource("4_ng60m")
offset = Vector2(2.08165e-12, -100)
